MDEV-8613 Full table scan for WHERE indexed_varchar_column <=> 'bad-character'